fix text identation and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .row{
-  align: vertical-center;
+  text-align: right;
 }
 
 
@@ -10,7 +10,7 @@
   align: center;
   display: inline-block;
   margin-left: 18px;
-  margin-right: 22px;
+  margin-right: 0;
 }
 
 .aboutmedesc{
@@ -36,7 +36,7 @@
 
 .desccolumn {
   float: left;
-  width: 48%;
+  width: 40%;
   padding: 60px;
   height: absolute;
 }
@@ -52,11 +52,12 @@
 
 .salutcolumn {
   float: left;
-  width: 47%;
-  padding: 12px;
+  width: 45%;
+  padding: 32px;
   height: absolute;
-  margin-left: 12px;
-  margin-right: 12px;
+  margin-right: 0;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 /* Clear floats after the columns */
@@ -64,6 +65,7 @@
   content: "";
   display: table;
   clear: all;
+  text-align: right;
 }
 
 .experience{
